--- a/index.qmd
+++ b/index.qmd
@@ -1,9 +1,9 @@
 ---
 title: "" 
-author: "<span style='color: #ffd700;'>by Tomasz Woźniak</span>"
+author: "<span style='color: #ff68b4;'>by Tomasz Woźniak</span>"
 email: "tomasz.wozniak@unimelb.edu.au"
 title-slide-attributes:
-  data-background-color: "#00bf63"
+  data-background-color: "#001D31"
 number-sections: false
 format: 
   revealjs: 
@@ -19,112 +19,955 @@ execute:
 
 ```{r palette}
 #| echo: false
-gre  = "#00bf63"
-vio  = "#8c52ff"
-grad = grDevices::colorRampPalette(c(gre, vio))(5)
+pin  = "#ff68b4"
+dar  = "#001D31"
+grad = grDevices::colorRampPalette(c(dar, pin))(5)
 ```
 
 
-##  {background-color="#00bf63"}
+##  {background-color="#001D31"}
 
-![](bsvars.org.png){.absolute top=80 right=750 width="400"}
-![](bsvars.png){.absolute top=80 right=350 width="400"}
-![](bsvarSIGNs.png){.absolute top=80 right=-50 width="400"}
-
-
-
-
-
-##  {background-color="#00bf63"}
-
-$$ $$
-
-### Structural Vector Autoregressions
-
-### Identification of Structural VARs {style="color:#ffd700;"}
-
-### Dynamic Causal Effects {style="color:#ffd700;"}
-
-### Bayesian Estimation {style="color:#ffd700;"}
-
-### Monetary Policy Analysis Using the  [bsvars](https://cran.r-project.org/package=bsvars) Package
+![](bsvars.org.png){.absolute top=80 right=725 width="400"}
+![](bsvars.png){.absolute top=80 right=325 width="400"}
+![](bsvarSIGNs.png){.absolute top=80 right=-75 width="400"}
 
 
 
 
 
-
-
-## Materials {background-color="#00bf63"} 
+## <span style='color: #ff68b4;'>predictive analyses using R packages bsvars and bsvarSIGNs</span> {background-color="#001D31"}
 
 $$ $$
 
-### Lecture Slides [as a Website](https://bsvars.github.io/2024-10-be24-bsvars) {style="color:#ffd700;"}
+### structural vector autoregressions {style="color:#ff68b4;"}
 
-### [R script](https://github.com/bsvars/2024-10-be24-bsvars/blob/main/be24-bsvars.R) for your own Australian monetary policy analysis{style="color:#ffd700;"}
+### predictive analyses using structural VARs {style="color:#ff68b4;"}
 
-### GitHub [repo](https://github.com/bsvars/2024-10-be24-bsvars) to reproduce the slides and results{style="color:#ffd700;"}
+### bsvars and bsvarSIGNs features {style="color:#ff68b4;"}
 
-### Tasks{style="color:#ffd700;"}
+### a small monetary policy system analysis {style="color:#ff68b4;"}
 
 
-## <span style="color: #ffd700;">Structural Vector Autoregressions</span> {background-color="#00bf63"}
 
-## Structural Vector Autoregressions
+
+
+
+
+## <span style='color: #ff68b4;'>materials</span> {background-color="#001D31"} 
+
+$$ $$
+
+### lecture slides [as a website](https://bsvars.org/2024-12-F4SG/) {style="color:#ff68b4;"}
+
+### [R script](https://github.com/bsvars/2024-10-be24-bsvars/blob/main/be24-bsvars.R) for Australian monetary policy analysis{style="color:#ff68b4;"}
+
+### GitHub [repo](https://github.com/bsvars/2024-12-F4SG) to reproduce the slides and results{style="color:#ff68b4;"}
+
+$$ $$
+
+### [bsvars.org](https://bsvars.org/) official project website{style="color:#ff68b4;"}
+
+### [bsvars](https://cran.r-project.org/package=bsvars) package on CRAN{style="color:#ff68b4;"}
+
+### [bsvarSIGNs](https://cran.r-project.org/package=bsvarSIGNs) package on CRAN{style="color:#ff68b4;"}
+
+
+
+
+
+## <span style="color: #ff68b4;">structural vector autoregressions</span> {background-color="#001D31"}
+
+## structural vector autoregressions
 
 - go-to models for the analysis of policy effects
 
 ::: incremental
 - facilitate the analysis of **dynamic causal effects** of a well-isolated cause
-- extensively used for: *monetary* and *fiscal* policy, *financial* markets, ...
 - relatively simple to work with data and provide *empirical evidence on the propagation of shocks* through economies and markets
-- provide data-driven stylised facts to be incorporated in theoretical model
-- require identification of the cause of the dynamic effects
+- provide data-driven stylised facts to be incorporated in theoretical models
+- extensively used for: *monetary* and *fiscal* policy, *financial* markets, ...
 - extendible: *featuring many variations in specification*
     -   non-normality
     -   heteroskedasticity
     -   time-varying parameters
-    -   Bayesian
+    -   Bayesian hierarchical modelling
 -   Proposed by [Sims (1980)](https://doi.org/10.2307/1912017)
 :::
 
 ::: footer
-[Bayesian Structural VARs](https://bsvars.github.io/2024-10-be24-bsvars)
+[bsvars.org](https://bsvars.org)
 :::
 
 
 
-## Structural Vector Autoregressions
+## structural vector autoregressions
 
 ::: footer
-[Bayesian Structural VARs](https://bsvars.github.io/2024-10-be24-bsvars)
+[bsvars.org](https://bsvars.org)
 :::
 
-### The model.
+### the model.
 \begin{align}
-\text{VAR equation: }&& y_t &= \mathbf{A}_1 y_{t-1} + \dots + \mathbf{A}_p y_{t-p} + \boldsymbol\mu_0 + \epsilon_t\\[1ex]
+\text{VAR equation: }&& y_t &= \mathbf{A}_1 y_{t-1} + \dots + \mathbf{A}_p y_{t-p} + \mathbf{A}_d x_{t} + \epsilon_t\\[1ex]
 \text{structural equation: }&& \mathbf{B}\epsilon_t &= u_t\\[1ex]
-\text{structural shocks: }&& u_t |Y_{t-1} &\sim N_N\left(\mathbf{0}_N,\mathbf{I}_N\right)
+\text{structural shocks: }&& u_t |Y_{t-1} &\sim N_N\left(\mathbf{0}_N,\text{diag}\left(\boldsymbol\sigma_t^2\right)\right)
 \end{align}
 
 ::: {.fragment}
-### Notation.
-- $\mathbf{B}$ - $N\times N$ structural matrix of contemporaneous relationships
-- $u_t$ - $N$-vector of structural shocks at time $t$
-  
-  Isolating these shocks allows us to *identify dynamic effects of
-uncorrelated shocks* on variables $y_t$
-
-- $\epsilon_t$ - $N$-vector with error terms at time $t$
-- the rest as in the lecture on [Bayesian VARs](https://bsvars.github.io/2024-10-be24-bsvarSIGNs/#/varp-model)
+### notation.
+- $y_t$ - $N$-vector of variables at time $t$
+- $\mathbf{A}_i$ and $\mathbf{B}$ - $N\times N$ matrices of autoregressive and structural coefficients
+- $\epsilon_t$ and $u_t$ - $N$-vectors of error terms and structural shocks at time $t$
+- $\boldsymbol\sigma_t^2$ - $N$-vector structural shock variances
 :::
 
 
 
 
+## SVARs: hierarchical prior distributions
+
+::: footer
+[bsvars.org](https://bsvars.org)
+:::
+
+:::: {.columns}
+::: {.column width="45%"}
+![](bsvars.png){width="120"}
+
+- normal-generalised normal prior for $\mathbf{A}$ and $\mathbf{B}$
+- 3-level local-global equation-specific shrinkage
+- Minnesota prior for non-stationary time series
+- improves model-fit and forecasting precision
+:::
+  
+::: {.column width="5%"}
+:::
+
+::: {.column width="45%"}
+![](bsvarSIGNs.png){width="120"}
+
+- normal-inverse Wishart prior for $\mathbf{A}$ and $\mathbf{\Sigma} = (\mathbf{B}'\mathbf{B})^{-1}$
+- estimated Minnesota prior shrinkage levels
+- Minnesota prior for non-stationary time series
+- improves model-fit and forecasting precision
+:::
+::::
 
 
-##  {background-color="#00bf63"}
 
-![](social.png){.absolute top=30 right=200 width="800"}
+
+
+
+## SVARs: volatility modelling
+
+::: footer
+[bsvars.org](https://bsvars.org)
+:::
+
+:::: {.columns}
+::: {.column width="65%"}
+![](bsvars.png){width="120"}
+
+- homoskedasticity $\boldsymbol\sigma_{n.t}^2 = 1$
+- stochastic volatility
+- stationary Markov-switching heteroskedasticity
+- non-parametric Markov-switching heteroskedasticity
+
+- joint distribution of structural shocks
+  - normal
+  - finite mixtures of normal distributions
+  - non-parametric mixtures of normal distributions
+  - Student-t
+:::
+  
+::: {.column width="5%"}
+:::
+
+::: {.column width="30%"}
+![](bsvarSIGNs.png){width="120"}
+
+- homoskedastic
+- normal
+:::
+::::
+
+
+
+
+
+
+
+## SVARs: structural identification
+
+::: footer
+[bsvars.org](https://bsvars.org)
+:::
+
+
+:::: {.columns}
+::: {.column width="45%"}
+![](bsvars.png){width="120"}
+
+- exclusion restrictions
+- time-varying volatility
+- non-normality
+:::
+  
+::: {.column width="5%"}
+:::
+
+::: {.column width="45%"}
+![](bsvarSIGNs.png){width="120"}
+
+- sign restrictions
+- exclusion restrictions
+- narrative restrictions
+:::
+::::
+
+
+
+
+
+
+
+
+
+
+## <span style="color: #ff68b4;">predictive analyses using structural VARs</span> {background-color="#001D31"}
+
+
+## the objective of economic forecasting
+
+::: footer
+[bsvars.org](https://bsvars.org)
+:::
+
+$\left.\right.$
+
+... is to use the available data to provide a statistical characterisation of the unknown future values of quantities of interest.
+
+$\left.\right.$
+
+The full statistical characterisation of the unknown future values of random variables is given by their *predictive density*.
+
+$\left.\right.$
+
+Simplified outcomes in a form of statistics summarising the predictive densities are usually used in decision-making processes.
+
+$\left.\right.$
+
+Summary statistics are also communicated to general audiences.
+
+
+## one-period ahead predictive density
+
+::: footer
+[bsvars.org](https://bsvars.org)
+:::
+
+### SVAR model.
+\begin{align*}
+y_t &= \mathbf{A}_1 y_{t-1} + \dots + \mathbf{A}_p y_{t-p} + \mathbf{A}_d x_{t} + \epsilon_t\\[2ex]
+\epsilon_t|Y_{t-1} &\sim iidN_N\left(\mathbf{0}_N,\mathbf\Sigma_t\right)\\[2ex]
+\mathbf\Sigma_t &= \mathbf{B}^{-1} \text{diag}\left(\boldsymbol\sigma^2_t\right)\mathbf{B}^{-1\prime}
+\end{align*}
+
+### one-period ahead conditional predictive density.
+
+... is implied by the model formulation:
+\begin{align*}
+y_{t+h}|Y_{t+h-1},\mathbf{A},\mathbf\Sigma_{t+h} &\sim N_N\left(\mathbf{A}_1 y_{t+h-1} + \dots + \mathbf{A}_p y_{t+h-p} + \mathbf{A}_d x_{t+h},\mathbf\Sigma_{t+h}\right)
+\end{align*}
+
+
+## one-period ahead predictive density
+
+::: footer
+[bsvars.org](https://bsvars.org)
+:::
+
+$\left.\right.$
+
+Bayesian forecasting takes into account the uncertainty w.r.t. parameter estimation by integrating it out from the predictive density.
+
+
+\begin{align*}
+&\\
+p(y_{T+1}|Y,X) &= \int p(y_{T+1}|Y_{T},\mathbf{A},\mathbf\Sigma_{T+1}) p(\mathbf{A},\mathbf\Sigma_{T+1}|Y,X) d(\mathbf{A},\mathbf\Sigma_{T+1})\\ &
+\end{align*}
+
+- $p(y_{T+1}|Y,X)$ - predictive density
+- $p(y_{T+1}|Y_{t},\mathbf{A},\mathbf\Sigma_{T+1})$ - one-period-ahead conditional predictive density
+- $p(\mathbf{A},\mathbf\Sigma_{T+1}|Y,X)$ - marginal posterior distribution
+- includes volatility forecasting $\boldsymbol\sigma^2_{T+1}$ to form $\mathbf\Sigma_{T+1}$
+
+
+
+
+## sampling from the predictive density
+::: footer
+[bsvars.org](https://bsvars.org)
+:::
+
+$\left.\right.$
+
+#### step 1: sample from the posterior 
+
+... and obtain $S$ draws $\left\{ \mathbf{A}^{(s)},\mathbf\Sigma_{T+1}^{(s)} \right\}_{s=1}^{S}$
+
+$\left.\right.$
+
+#### step 2: sample from the predictive density
+
+In order to obtain draws from $p(y_{T+1}|Y,X)$, for each of the $S$ draws of $(\mathbf{A},\mathbf\Sigma_{T+1})$ sample the corresponding draw of $y_{T+1}$:
+
+Sample $y_{T+1}^{(s)}$ from 
+$$ 
+N_N\left(\mathbf{A}_1^{(s)} y_{T} + \dots + \mathbf{A}_p^{(s)} y_{T-p+1} + \mathbf{A}_d^{(s)} x_{T+1},\mathbf\Sigma_{T+1}^{(s)}\right)
+$$
+and obtain $\left\{y_{T+1}^{(s)}\right\}_{s=1}^{S}$
+
+
+
+
+
+
+
+
+
+## impulse response functions
+::: footer
+[bsvars.org](https://bsvars.org)
+:::
+
+$\left.\right.$
+
+**Impulse response functions** to *orthogonal shocks* computed for an empirically relevant SVAR model are considered the <text style="color:#ff68b4;">**dynamic causal effects**</text> of the underlying shocks $u_t$ on economic measurements $y_{t+i}$ $i$ periods ahead.
+
+\begin{align*}
+\frac{\partial y_{n.t+i}}{\partial u_{j.t}}&=\theta_{nj.i}
+\end{align*}
+
+- $\theta_{nj.i}$ - response of $n$th variable to $j$th shock $i$ periods after shock's occurrence
+
+  for $i=0,1,\dots,h$ and $n,j=1,\dots,N$
+
+
+
+
+
+
+## impulse response functions
+::: footer
+[bsvars.org](https://bsvars.org)
+:::
+
+$\left.\right.$
+
+### ...as a difference in conditional forecasts.
+
+\begin{align}
+\mathbf\Theta_{h[\cdot i]} &= \mathbb{E}\left[\mathbf{y}_{T+h}| u_{i.T} = 1,\mathbf{Y},\mathbf{X}\right] - \mathbb{E}\left[\mathbf{y}_{T+h}| \mathbf{Y},\mathbf{X}\right]
+\end{align}
+
+### ...as the shock propagation mechanism.
+
+\begin{align}
+y_t &= \mathbf{B}^{-1}\mathbf{u}_t + \mathbf{A}_1 y_{t-1}\\
+&= \mathbf{B}^{-1}\mathbf{u}_t + \mathbf{A}_1 \mathbf{B}^{-1}\mathbf{u}_{t-1} + \mathbf{A}_1^2 y_{t-2}\\
+&\dots\\
+&= \mathbf{\Theta}_0\mathbf{u}_t + \mathbf{\Theta}_1\mathbf{u}_{t-1} + \mathbf{\Theta}_2\mathbf{u}_{t-2} + \dots
+\end{align}
+
+
+
+
+
+
+## forecast error variance decompositions
+::: footer
+[bsvars.org](https://bsvars.org)
+:::
+
+
+... are a way to quantify the relative importance of the shocks in explaining the forecast error variance of the variables in the system.
+
+#### forecast error covariance matrix.
+
+\begin{align}
+\mathbf\Sigma_{T+h} &= 
+\mathbf{\Theta}_h \text{diag}\left(\boldsymbol\sigma^2_{T+h}\right)\mathbf{\Theta}_h^{\prime}
+\end{align}
+
+#### forecast error variance.
+
+For the first variable, at the forecast horizon $h$, for $N=2$:
+
+\begin{align}
+\mathbf\Sigma_{T+h[11]} &= 
+\mathbf{\Theta}_{h[11]}^2 \sigma^2_{1.T+h} + \mathbf{\Theta}_{h[12]}^2 \sigma^2_{2.T+h}
+\end{align}
+
+#### forecast error variance decomposition.
+
+First shock's contribution to the forecast error variance of the first variable:
+
+\begin{align}
+\mathbf\Sigma_{T+h[11]} &= \frac{\mathbf{\Theta}_{h[11]}^2 \sigma^2_{1.T+h}}{
+\mathbf{\Theta}_{h[11]}^2 \sigma^2_{1.T+h} + \mathbf{\Theta}_{h[12]}^2 \sigma^2_{2.T+h}}
+\end{align}
+
+
+
+## <span style="color: #ff68b4;">bsvars and bsvarSIGNs features</span> {background-color="#001D31"}
+
+
+
+## bsvars and bsvarSIGNs features 
+
+::: footer
+[bsvars.org](https://bsvars.org)
+:::
+
+:::: {.columns}
+
+::: {.column width="50%"}
+![](bsvars_cran.png){.absolute top=100 width="530"}
+:::
+
+::: {.column width="50%"}
+![](bsvarSIGNs_cran.png){.absolute top=100 width="530"}
+:::
+
+::::
+
+
+
+
+## bsvars and bsvarSIGNs features
+
+::: footer
+[bsvars.org](https://bsvars.org)
+:::
+
+$$ $$
+
+- Bayesian estimation of Structural VARs
+- coherent code structure, workflows, and objects
+- excellent computational speed
+- frontier econometric & numerical techniques
+- written in **C++** using **Rcpp** and **RcppArmadillo**
+- data analysis in **R**
+
+
+
+
+
+## <span style="color: #ff68b4;">bsvars and bsvarSIGNs features</span> {background-color="#001D31"}
+::: footer
+[bsvars.org](https://bsvars.org)
+:::
+
+:::: {.columns}
+
+::: {.column width="50%"}
+![](bsvars.png){width="120"}
+
+- package and data loading
+
+```{r}
+#| eval: false
+library(bsvars)
+data(us_fiscal_lsuw)
+```
+
+- simple model setup
+
+```{r}
+#| eval: false
+spec = specify_bsvar$new(us_fiscal_lsuw)
+```
+
+- simple estimation
+
+```{r}
+#| eval: false
+burn = estimate(spec, S = 1000)
+post = estimate(burn, S = 10000)
+```
+
+:::
+
+::: {.column width="50%"}
+![](bsvarSIGNs.png){width="120"}
+
+- package and data loading
+
+```{r}
+#| eval: false
+library(bsvarSIGNs)
+data(optimism)
+```
+
+- simple model setup
+
+```{r}
+#| eval: false
+spec = specify_bsvarSIGN$new(optimism)
+```
+
+- simple estimation
+
+```{r}
+#| eval: false
+post = estimate(spec, S = 10000)
+```
+
+:::
+
+::::
+
+
+
+
+
+
+## <span style="color: #ff68b4;">bsvars and bsvarSIGNs features</span> {background-color="#001D31"}
+
+::: footer
+[bsvars.org](https://bsvars.org)
+:::
+
+:::: {.columns}
+
+::: {.column width="50%"}
+![](bsvars.png){width="120"}
+
+- structural analyses
+```{r}
+#| eval: false
+irfs = compute_impulse_responses(post , horizon = 12)
+fevd = compute_variance_decompositions(post, horizon = 12)
+hds  = compute_historical_decompositions(post)
+ss   = compute_structural_shocks(post)
+csds = compute_conditional_sd(post)
+sddr = verify_identification(post)
+```
+
+:::
+  
+::: {.column width="50%"}
+![](bsvarSIGNs.png){width="120"}
+
+
+- structural analyses
+```{r}
+#| eval: false
+irfs = compute_impulse_responses(post , horizon = 12)
+fevd = compute_variance_decompositions(post, horizon = 12)
+hds  = compute_historical_decompositions(post)
+ss   = compute_structural_shocks(post)
+csds = compute_conditional_sd(post)
+```
+
+:::
+  
+::::
+
+
+
+
+
+## <span style="color: #ff68b4;">bsvars and bsvarSIGNs features</span> {background-color="#001D31"}
+
+::: footer
+[bsvars.org](https://bsvars.org)
+:::
+
+:::: {.columns}
+
+::: {.column width="50%"}
+![](bsvars.png){width="120"}
+
+- predictive analyses
+
+```{r}
+#| eval: false
+fvs  = compute_fitted_values(post)
+fore = forecast(post, horizon = 12)
+```
+
+
+- plots and summaries
+
+```{r}
+#| eval: false
+plot(irfs)
+summary(irfs)
+```
+
+:::
+  
+::: {.column width="50%"}
+![](bsvarSIGNs.png){width="120"}
+
+- predictive analyses
+
+```{r}
+#| eval: false
+fvs  = compute_fitted_values(post)
+fore = forecast(post, horizon = 12)
+```
+
+- plots and summaries
+
+```{r}
+#| eval: false
+plot(irfs)
+summary(irfs)
+```
+
+:::
+  
+::::
+
+
+
+
+
+
+## <span style="color: #ff68b4;">bsvars and bsvarSIGNs features</span> {background-color="#001D31"}
+
+::: footer
+[bsvars.org](https://bsvars.org)
+:::
+
+:::: {.columns}
+
+::: {.column width="50%"}
+![](bsvars.png){width="120"}
+
+- workflow with the pipe
+
+```{r}
+#| eval: false
+library(bsvars)
+data(us_fiscal_lsuw)
+
+us_fiscal_lsuw |> 
+  specify_bsvar$new() |> 
+  estimate(S = 1000) |> 
+  estimate(S = 10000) -> post
+
+post |> compute_impulse_responses(horizon = 12) |> plot()
+post |> compute_variance_decompositions(horizon = 12) |> plot()
+post |> compute_historical_decompositions() |> plot()
+post |> compute_structural_shocks() |> plot()
+post |> compute_conditional_sd() |> plot()
+post |> forecast(horizon = 12) |> plot()
+post |> verify_identification() |> summary()
+```
+:::
+  
+::: {.column width="50%"}
+![](bsvarSIGNs.png){width="120"}
+
+- workflow with the pipe
+
+```{r}
+#| eval: false
+library(bsvarSIGNs)
+data(optimism)
+
+optimism |> 
+  specify_bsvarSIGN$new() |> 
+  estimate(S = 10000) -> post
+
+post |> compute_impulse_responses(horizon = 12) |> plot()
+post |> compute_variance_decompositions(horizon = 12) |> plot()
+post |> compute_historical_decompositions() |> plot()
+post |> compute_structural_shocks() |> plot()
+post |> compute_conditional_sd() |> plot()
+post |> forecast(horizon = 12) |> plot()
+```
+:::
+  
+::::
+
+
+## <span style="color: #ff68b4;">bsvars and bsvarSIGNs features</span> {background-color="#001D31"}
+
+::: footer
+[bsvars.org](https://bsvars.org)
+:::
+
+:::: {.columns}
+
+::: {.column width="50%"}
+![](bsvars.png){width="120"}
+
+- progress bar
+
+![](bsvars_progress.png){width="500"}
+:::
+  
+::: {.column width="50%"}
+![](bsvarSIGNs.png){width="120"}
+
+- progress bar
+
+![](bsvarSIGNs_progress.png){width="500"}
+:::
+  
+::::
+
+
+
+
+
+
+
+
+
+
+
+
+
+## <span style="color: #ff68b4;">a small monetary policy system analysis</span> {background-color="#001D31"}
+
+## a small monetary policy system analysis
+
+::: footer
+[bsvars.org](https://bsvars.org)
+:::
+
+
+
+
+## [bsvars](https://bsvars.github.io){style="color:#8c52ff;"} modeling of  monetary policy
+
+### Australian domestic sector.
+
+\begin{align}
+y_t = \begin{bmatrix} rgdp_t & cpi_t & CR_t & EX_t & aord_t \end{bmatrix}'
+\end{align}
+
+- monthly data from August 1990 to March 2024
+- quarterly variables interpolated to monthly frequency
+
+
+
+
+## [bsvars](https://bsvars.github.io){style="color:#8c52ff;"} modeling of  monetary policy
+
+### Foreign sector.
+
+\begin{align}
+x_t = \begin{bmatrix} rgdp_t^{(US)} & cpi_t^{(US)} & FFR_t \end{bmatrix}'
+\end{align}
+
+- monthly data from August 1990 to March 2024
+- quarterly variables interpolated to monthly frequency
+- contemporaneous and four lagged values are included in the model as exogenous variables
+
+
+
+## 
+
+![](bsvars.png){.absolute top=550 right=10 width="120"}
+
+### Zero-restriction-identified system.
+
+\begin{align}
+\begin{bmatrix}
+B_{0.11}&0&0&0&0\\
+B_{0.21}&B_{0.22}&0&0&0\\
+B_{0.31}&B_{0.32}&B_{0.33}&0&0\\
+B_{0.41}&B_{0.42}&B_{0.43}&B_{0.44}&0\\
+B_{0.51}&B_{0.52}&B_{0.53}&B_{0.54}&B_{0.55}
+\end{bmatrix}
+\begin{bmatrix}rgdp_t \\ cpi_t \\ CR_t \\ EX_t\\ aord_t \end{bmatrix} &= \dots +
+\begin{bmatrix} u_t^{ad} \\ u_t^{as} \\ u_t^{mps} \\ u_t^{ex} \\ u_t^{aord} \end{bmatrix}
+\end{align}
+
+### Identified shocks.
+
+- $u_t^{mps}$ - monetary policy shock
+- $u_t^{ex}$ - currency shock
+
+
+
+
+
+
+## specify and estimate the SVAR
+
+![](bsvars.png){.absolute top=-20 right=10 width="120"}
+
+\begin{align}
+&
+\end{align}
+
+```{r spec}
+#| cache: true
+
+library(bsvars)
+
+# upload data
+data(us_fiscal_lsuw)    # upload dependent variables
+data(us_fiscal_ex)      # upload exogenous variables
+
+# specify the model and set seed
+set.seed(123)
+spec  = specify_bsvar$new(
+  us_fiscal_lsuw, 
+  p = 4, 
+  exogenous = us_fiscal_ex
+)
+
+# run the burn-in
+burn        = estimate(spec, S = 1000)
+
+# estimate the model
+post      = estimate(burn, S = 10000)
+```
+
+
+## impulse responses
+
+![](bsvars.png){.absolute top=-20 right=10 width="120"}
+
+\begin{align}
+&
+\end{align}
+
+```{r bs00}
+#| cache: true
+post |> compute_impulse_responses(horizon = 40) |> plot(probability = 0.68, col = "#ff68b4")
+
+```
+
+
+## forecast error variance decompositions
+
+![](bsvars.png){.absolute top=-20 right=10 width="120"}
+
+\begin{align}
+&
+\end{align}
+
+```{r bs00fevd}
+#| cache: true
+post |> compute_variance_decompositions(horizon = 40) |> plot(col = grad)
+
+```
+
+
+## conditional forecasts
+
+![](bsvars.png){.absolute top=-20 right=10 width="120"}
+
+\begin{align}
+&
+\end{align}
+
+```{r bs00for}
+#| cache: true
+data(us_fiscal_ex_forecasts)      # upload exogenous variables future values
+post |> 
+  forecast(horizon = 8, exogenous_forecast = us_fiscal_ex_forecasts) |> 
+  plot(col = "#ff68b4", data_in_plot = 0.2)
+```
+
+
+
+
+
+## specify and estimate the SVAR
+
+![](bsvarSIGNs.png){.absolute top=-20 right=10 width="120"}
+
+\begin{align}
+&
+\end{align}
+
+```{r specs}
+#| cache: true
+
+library(bsvarSIGNs)
+
+# specify the model and set seed
+sign = matrix(NA, 3, 3)
+diag(sign) = 1
+sign[1, 3] = 1
+sign
+
+# specify the model
+spec = specify_bsvarSIGN$new(
+  us_fiscal_lsuw,
+  p = 4,
+  sign_irf = sign
+)
+
+# estimate the hyper-parameters
+spec$prior$estimate_hyper(S = 10000)
+
+# estimate the model
+posts = estimate(spec, S = 10000)
+```
+
+
+
+## impulse responses
+
+![](bsvarSIGNs.png){.absolute top=-20 right=10 width="120"}
+
+\begin{align}
+&
+\end{align}
+
+```{r bs00s}
+#| cache: true
+posts |> compute_impulse_responses(horizon = 40) |> plot(probability = 0.68, col = "#001D31")
+
+```
+
+
+## forecast error variance decompositions
+
+![](bsvarSIGNs.png){.absolute top=-20 right=10 width="120"}
+
+\begin{align}
+&
+\end{align}
+
+```{r bs00fevds}
+#| cache: true
+posts |> compute_variance_decompositions(horizon = 40) |> plot(col = grad)
+
+```
+
+
+## forecasts
+
+![](bsvarSIGNs.png){.absolute top=-20 right=10 width="120"}
+
+\begin{align}
+&
+\end{align}
+
+```{r bs00fors}
+#| cache: true
+posts |>
+  forecast(horizon = 8) |>
+  plot(col = "#001D31", data_in_plot = 0.2)
+```
+
+
+
+
+##  {background-color="#001D31"}
+
+![](social.png){.absolute top=10 right=10 width="1000"}
 
